--- a/website/scss/index.scss
+++ b/website/scss/index.scss
@@ -55,6 +55,7 @@ body {
   top: 50px;
   z-index: 1;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 nav {
@@ -276,6 +277,7 @@ input, select {
   border: 1px transparent solid;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.225);
+  max-width: 170px;
 
   &[type="number"] {
     width: fit-content;
@@ -298,8 +300,18 @@ input, select {
   box-shadow: 0 0 10px rgba(0,0,0,0.325);
 }
 
-.tagify__input::before {
-  color: var(--main) !important;
+.tagify__input {
+  user-select: text;
+  -webkit-user-modify: read-write;
+
+  &::before {
+    color: var(--main) !important;
+  }
+}
+
+.tagify__tag > div > [contenteditable] {
+  user-select: text;
+  -webkit-user-modify: read-write;
 }
 
 .tagify__dropdown__wrapper {
