--- a/website/scss/index.scss
+++ b/website/scss/index.scss
@@ -56,6 +56,7 @@ body {
   z-index: 1;
   width: 100vw;
   overflow-x: hidden;
+  padding-bottom: 10px;
 }
 
 nav {
@@ -64,7 +65,7 @@ nav {
   width: 100%;
   background-color: var(--topbar);
   position: fixed;
-  z-index: 3;
+  z-index: 5;
   border-bottom: 2px solid var(--background);
 
   > h3 {
@@ -248,7 +249,7 @@ small {
   position: fixed;
   height: 100%;
   width: 100%;
-  z-index: 10;
+  z-index: 4;
   margin: 0;
   top: 0;
   transition: 0.3s;
