--- a/website/scss/premium.scss
+++ b/website/scss/premium.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
-#premium {
+#premium-section {
   display: grid;
   padding-top: 20px;
   grid-template-columns: repeat(3, minmax(100px, 1fr));
@@ -93,7 +93,7 @@
   border: 1px #ea545526 solid;
 }
 
-#premium > div:hover, #perks > div:hover {
+#premium-section > div:hover, #perks > div:hover {
   transition: 0.5s;
   cursor: default;
 }
@@ -107,7 +107,7 @@
 }
 
 @media (max-width: 750px) {
-  #premium {
+  #premium-section {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1, 1fr);
   }
