--- a/website/scss/premium.scss
+++ b/website/scss/premium.scss
@@ -32,6 +32,8 @@
     margin-bottom: 20px;
     text-align: center;
 
+    min-width: 220px;
+
     &:hover {
       transform: translateY(-10px);
     }
