--- a/website/src/pages/Global.scss
+++ b/website/src/pages/Global.scss
@@ -13,6 +13,15 @@ body {
   background-color: var(--main)
 }
 
+#root {
+  @media (min-width: 1200px) {
+    padding-top: 5vh;
+  }
+  background-color: var(--main);
+  min-height: 95vh;
+  width: -webkit-fill-available;
+}
+
 #__next {
   display: flex;
   flex-wrap: wrap;
