--- a/website/src/pages/Global.scss
+++ b/website/src/pages/Global.scss
@@ -15,7 +15,7 @@ body {
 
 #root {
   background-color: var(--main);
-  min-height: 95vh;
+  min-height: 93vh;
   width: -webkit-fill-available;
 }
 
@@ -72,4 +72,22 @@ body {
 
 .tagify__dropdown__item--active {
   background: var(--secondary) !important;
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar{
+  width: 7px;
+  height: 7px;
+}
+::-webkit-scrollbar-thumb{
+  background: #B3AFB3 !important;
+  border-radius: 6px;
+}
+::-webkit-scrollbar-thumb:hover{
+  background: #B3AFB3;
+}
+::-webkit-scrollbar-track{
+  background: transparent;
+  border-radius: 0px;
+  box-shadow: inset 0px 0px 0px 0px #F0F0F0;
 }
