Finish bot page

--- a/website/src/components/navbar/Navbar.module.scss
+++ b/website/src/components/navbar/Navbar.module.scss
@@ -9,6 +9,7 @@
   margin: auto;
 
   padding: 0px 10px;
+  border-bottom: 1px solid var(--ccvars-colors-lighter-5);
 
   width: -webkit-fill-available;
   // position: fixed;
