--- a/website/src/pages/Global.scss
+++ b/website/src/pages/Global.scss
@@ -13,11 +13,11 @@ body {
   background-color: var(--main)
 }
 
-#root {
-  background-color: var(--main);
-  min-height: 93vh;
-  width: -webkit-fill-available;
-}
+// #root {
+//   background-color: var(--main);
+//   min-height: 92vh;
+//   width: -webkit-fill-available;
+// }
 
 #__next {
   display: flex;
