feat(dashboard): fully implement setting abstraction

--- a/website/src/pages/Global.scss
+++ b/website/src/pages/Global.scss
@@ -91,3 +91,7 @@ body {
   border-radius: 0px;
   box-shadow: inset 0px 0px 0px 0px #F0F0F0;
 }
+
+grammarly-extension {
+  display: none; // LLLLL
+}
