--- a/website/src/pages/Global.scss
+++ b/website/src/pages/Global.scss
@@ -10,7 +10,8 @@
 body {
   margin: 0px;
   font-family: 'Inter', sans-serif;
-  background-color: var(--main)
+  background-color: var(--main);
+  max-width: 100vw; height: 100%; min-height: 1000px
 }
 
 // #root {
