--- a/website/src/pages/Global.scss
+++ b/website/src/pages/Global.scss
@@ -20,6 +20,10 @@ body {
 //   width: -webkit-fill-available;
 // }
 
+.chakra-form-control {
+  width: 100%
+}
+
 #__next {
   display: flex;
   flex-wrap: wrap;
