--- a/src/website/src/pages/Global.scss
+++ b/src/website/src/pages/Global.scss
@@ -70,3 +70,17 @@ grammarly-extension {
     max-width: 50vw !important;
   }
 }
+
+.Typist .Cursor {
+  display: inline-block; }
+  .Typist .Cursor--blinking {
+    opacity: 1;
+    animation: blink 1s linear infinite; }
+
+@keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
